@@ -1,6 +1,7 @@
 procps-3.2.4 --> procps-3.2.5
 
 ps: security labels can contain any printable ASCII
+top: help and version message on stdout, with exit(0)    #283541
 
 procps-3.2.3 --> procps-3.2.4
 
